// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty tab view 1`] = `
<div
  className="scene tabsScene"
>
  <div
    className="header"
  >
    <img
      alt=""
      id="logo"
      src="logo.png"
    />
    <h2>
      uneven
    </h2>
  </div>
  <div
    className="content content-with-footer"
  >
    <main>
      <div
        className="empty-info"
      >
        <p>
          Track shared expenses in a group of people. You can create groups for projects or topics like "Summer roadtrip" or "Badminton".
        </p>
        <p>
          Start by creating your first group:
        </p>
      </div>
      <div
        className="form-row"
      >
        <form
          className="create-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onChange={[Function]}
            placeholder="Group title …"
            type="text"
            value=""
          />
          <button
            className="create"
          >
            Create
          </button>
        </form>
      </div>
      <div
        className="form-row"
      >
        <p
          className="fake-link"
          onClick={[Function]}
        >
          Import group
        </p>
      </div>
    </main>
    <footer>
      Version: 
      N/A
       –
       
      <a
        href="https://grouptabs.net/"
        rel="noopener"
        target="_blank"
      >
        grouptabs.net
      </a>
    </footer>
  </div>
</div>
`;

exports[`renders tab view 1`] = `
<div
  className="scene tabsScene"
>
  <div
    className="header"
  >
    <img
      alt=""
      id="logo"
      src="logo.png"
    />
    <h2>
      uneven
    </h2>
  </div>
  <div
    className="content content-with-footer"
  >
    <main>
      <div
        className="row tabs"
      >
        <button
          className="full-width list-item-with-arrow"
          onClick={[Function]}
        >
          TAB NAME
        </button>
      </div>
      <div
        className="form-row"
      >
        <form
          className="create-form"
          onSubmit={[Function]}
        >
          <input
            className="full-width"
            onChange={[Function]}
            placeholder="Group title …"
            type="text"
            value=""
          />
          <button
            className="create"
          >
            Create
          </button>
        </form>
      </div>
      <div
        className="form-row"
      >
        <p
          className="fake-link"
          onClick={[Function]}
        >
          Import group
        </p>
      </div>
    </main>
    <footer>
      Version: 
      N/A
       –
       
      <a
        href="https://grouptabs.net/"
        rel="noopener"
        target="_blank"
      >
        grouptabs.net
      </a>
    </footer>
  </div>
</div>
`;
